<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:layout_weight="1"
                android:textSize="18dp"
                style="@style/AlertDialog.AppCompat.Light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Present Days"
                android:layout_weight="1"
                android:textSize="18dp"
                style="@style/AlertDialog.AppCompat.Light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Days"
                android:layout_weight="1"
                android:textSize="18dp"
                style="@style/AlertDialog.AppCompat.Light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Percentage"
                android:layout_weight="1"
                android:textSize="18dp"
                style="@style/AlertDialog.AppCompat.Light"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/math"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/math1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/math2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/math3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chem"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/chem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/chem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/chem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/csen"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csen3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phy"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phy3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hmts"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/hmts1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/hmts2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/hmts3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/info_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoLab"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/infoLab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/infoLab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/infoLab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mathLab"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/mathLab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/mathLab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/mathLab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phyLab"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phyLab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phyLab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/phyLab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/csenLab"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csenLab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csenLab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/csenLab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"
                android:textSize="15dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>